syntax = "proto3";

package cb.auth;

// https://github.com/protocolbuffers/protobuf/issues/4176

import "common.proto";
import "google/protobuf/timestamp.proto";
//import "google/protobuf/any.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc GetGoogleAuthURL(cb.common.Empty) returns (GoogleAuthURLResponse) {}
  rpc GoogleAuth(GoogleAuthRequest) returns (GoogleAuthResponse) {}
}

message LoginRequest {
  string password = 1;
  string email = 2;
}

message Output {
  bool ok = 1;
  optional string error = 2;
}

message LoginResponse {
  optional string token = 1;
  bool ok = 2;
  optional string error = 3;
}

message GoogleAuthURLResponse {
  string url = 1;
}

message GoogleAuthRequest {
  string code = 1;
}
message GoogleAuthResponse {
  optional string token = 1;
  bool ok = 2;
  optional string error = 3;
}

enum Role {
  Client = 0;
  Assistant = 1;
  Admin = 2;
}

message CreateAccountRequest {
  string email = 1;
  string password = 2;
  // todo role
}

message CreateAccountResponse {
  optional string error = 1;
  bool ok = 2;
}

service UsersService {
  rpc FindUser(FindUserRequest) returns (FindUserResponse) {}
  rpc EditProfile(EditProfileRequest) returns (EditProfileResponse) {}
  rpc GetAllUsers(cb.common.Empty) returns (GetAllUsersResponse) {}
}

message FindUserRequest {
  int32 userId = 1;
}

message User {
  int32 id = 1;
  bool verified = 2;
  string email = 3;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message FindUserResponse {
  optional User user = 1;
  optional string error = 2;
  bool ok = 3;
}

message Profile {
  string email = 1;
  string password = 2;  
}

message EditProfileRequest {
  int32 userId = 1;
}

message EditProfileResponse {
  optional string error = 1;
  bool ok = 2;
}

message GetAllUsersResponse {
  repeated User users = 1;
  optional string error = 2;
  bool ok = 3;
}